--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
-/__pycache__
-/cida/__pycache__
-/artifacts
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.so
+.venv/
+.env
+.env.*
+
+
+node_modules/
+.next/
+out/
+dist/
+coverage/
+
+
+
+
+*.onnx
+*.pt
+*.bin
+services/trainer/artifacts/
+services/api/.pytest_cache/
+services/api/.mypy_cache/
+
+
+infra/docker/data/
+
+
+legacy/
+
