--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -1,14 +1,32 @@
-FROM python:3.11-slim
+FROM python:3.11-slim AS builder
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+
+ARG INSTALL_TORCH_CPU=0
 
 WORKDIR /app
-COPY services/api/requirements.txt /app/requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+RUN python -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
+COPY services/api/requirements.txt /tmp/requirements.txt
+COPY services/api/requirements-torch-cpu.txt /tmp/requirements-torch-cpu.txt
+RUN pip install --upgrade pip \
+    && pip install -r /tmp/requirements.txt \
+    && if [ "$INSTALL_TORCH_CPU" = "1" ]; then pip install -r /tmp/requirements-torch-cpu.txt; fi
+
+FROM python:3.11-slim AS runtime
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PATH="/opt/venv/bin:$PATH"
+
+WORKDIR /app
+COPY --from=builder /opt/venv /opt/venv
 COPY services/api /app
-EXPOSE 8000
 
+EXPOSE 8000
 CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
 
