--- a/services/trainer/requirements.txt
+++ b/services/trainer/requirements.txt
@@ -3,6 +3,7 @@ transformers==4.48.1
 datasets==3.2.0
 accelerate==1.2.1
 onnxruntime==1.20.1
+onnx==1.17.0
 numpy==2.2.2
 pandas==2.2.3
 scikit-learn==1.6.1
