--- a/services/trainer/requirements.txt
+++ b/services/trainer/requirements.txt
@@ -6,6 +6,7 @@ onnxruntime==1.20.1
 onnx==1.17.0
 numpy==2.2.2
 pandas==2.2.3
+fastparquet==2025.12.0
 scikit-learn==1.6.1
 scipy==1.15.1
 tqdm==4.67.1
