Bake detector artifacts into API image for old-style Railway deploy

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ __pycache__/
 .venv/
 .env
 .env.*
+!.env.example
+!**/.env.example
 
 
 node_modules/
@@ -21,6 +23,7 @@ coverage/
 *.pt
 *.bin
 services/trainer/artifacts/
+!services/artifacts/artifacts_latest/model.onnx
 services/api/.pytest_cache/
 services/api/.mypy_cache/
 
@@ -29,4 +32,3 @@ infra/docker/data/
 
 
 legacy/
-
