--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -20,7 +20,8 @@ reportlab==4.2.5
 boto3==1.36.14
 httpx==0.28.1
 tenacity==9.0.0
-onnxruntime==1.20.1
 transformers==4.48.1
+sentencepiece==0.2.0
 numpy==2.2.2
+torch==2.5.1
 
