--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,12 +9,15 @@ JWT_EXPIRE_MINUTES=30
 ADMIN_USER=admin
 ADMIN_PASS=admin
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-MODEL_VERSION=deberta-v3-large-v2
-DETECTOR_MODEL_NAME=microsoft/deberta-v3-large
-DETECTOR_ONNX_PATH=/app/runtime_bundle/model.onnx
-DETECTOR_TOKENIZER_PATH=/app/runtime_bundle/model
-DETECTOR_ALLOW_REMOTE_DOWNLOAD=false
-CALIBRATION_PATH=/app/runtime_bundle/calibration.json
+MODEL_VERSION=hf-shahxeebhassan-bert-base-ai-content-detector
+DETECTOR_MODEL_NAME=shahxeebhassan/bert_base_ai_content_detector
+DETECTOR_ALLOW_REMOTE_DOWNLOAD=true
+DETECTOR_AI_LABEL=1
+DETECTOR_MAX_LENGTH=512
+HUMANIZER_MODEL_NAME=Eemansleepdeprived/Humaneyes
+HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
+HUMANIZER_MAX_INPUT_TOKENS=512
+HUMANIZER_MAX_NEW_TOKENS=256
 CACHE_TTL_SECONDS=600
 MAX_UPLOAD_BYTES=3145728
 R2_ENDPOINT=
