--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -10,8 +10,14 @@ RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
 COPY services/api/requirements.txt /tmp/requirements.txt
+COPY services/api/requirements-torch-cpu.txt /tmp/requirements-torch-cpu.txt
 RUN pip install --upgrade pip \
-    && pip install -r /tmp/requirements.txt
+    && pip install --no-cache-dir -r /tmp/requirements.txt \
+    && pip install --no-cache-dir -r /tmp/requirements-torch-cpu.txt \
+    && rm -rf /root/.cache /tmp/* \
+    && find /opt/venv -type d -name __pycache__ -prune -exec rm -rf {} + \
+    && find /opt/venv -type f \( -name "*.pyc" -o -name "*.pyo" \) -delete \
+    && find /opt/venv -type d -name tests -prune -exec rm -rf {} +
 
 FROM python:3.11-slim AS runtime
 
@@ -22,9 +28,14 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 WORKDIR /app
 COPY --from=builder /opt/venv /opt/venv
-COPY services/api /app
+COPY services/api/app /app/app
+COPY services/api/alembic /app/alembic
+COPY services/api/alembic.ini /app/alembic.ini
 
-RUN mkdir -p /app/.cache/huggingface
+RUN mkdir -p /app/.cache/huggingface \
+    && rm -rf /root/.cache /tmp/* \
+    && find /opt/venv -type d -name __pycache__ -prune -exec rm -rf {} + \
+    && find /opt/venv -type f \( -name "*.pyc" -o -name "*.pyo" \) -delete
 
 EXPOSE 8000
 CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
