--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -16,6 +16,7 @@ DETECTOR_AI_LABEL=1
 DETECTOR_MAX_LENGTH=512
 HUMANIZER_MODEL_NAME=Eemansleepdeprived/Humaneyes
 HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
+HUMANIZER_REQUIRE_MODEL=true
 HUMANIZER_MAX_INPUT_TOKENS=512
 HUMANIZER_MAX_NEW_TOKENS=256
 CACHE_TTL_SECONDS=600
