--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -1,5 +1,5 @@
 fastapi==0.115.7
-uvicorn[standard]==0.34.0
+uvicorn==0.34.0
 pydantic==2.10.6
 pydantic-settings==2.7.1
 sqlalchemy[asyncio]==2.0.37
@@ -16,12 +16,9 @@ PyJWT==2.10.1
 orjson==3.10.15
 python-docx==1.1.2
 pypdf==5.2.0
-reportlab==4.2.5
-boto3==1.36.14
 httpx==0.28.1
 tenacity==9.0.0
 transformers==4.48.1
 sentencepiece==0.2.0
 accelerate==1.2.1
-numpy==2.2.2
 
