--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -14,6 +14,12 @@ COPY services/api/requirements-torch-cpu.txt /tmp/requirements-torch-cpu.txt
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
     && pip install --no-cache-dir -r /tmp/requirements-torch-cpu.txt \
+    && rm -rf /opt/venv/lib/python*/site-packages/pip /opt/venv/lib/python*/site-packages/pip-* \
+    && rm -rf /opt/venv/lib/python*/site-packages/setuptools /opt/venv/lib/python*/site-packages/setuptools-* \
+    && rm -rf /opt/venv/lib/python*/site-packages/wheel /opt/venv/lib/python*/site-packages/wheel-* \
+    && rm -f /opt/venv/bin/pip /opt/venv/bin/pip3 /opt/venv/bin/pip3.* \
+    && rm -rf /opt/venv/lib/python*/site-packages/torch/include /opt/venv/lib/python*/site-packages/torch/share \
+    && find /opt/venv/lib/python*/site-packages/torch -type f -name "*.a" -delete \
     && rm -rf /root/.cache /tmp/* \
     && find /opt/venv -type d -name __pycache__ -prune -exec rm -rf {} + \
     && find /opt/venv -type f \( -name "*.pyc" -o -name "*.pyo" \) -delete \
@@ -29,13 +35,12 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 WORKDIR /app
 COPY --from=builder /opt/venv /opt/venv
 COPY services/api/app /app/app
-COPY services/api/alembic /app/alembic
-COPY services/api/alembic.ini /app/alembic.ini
 
 RUN mkdir -p /app/.cache/huggingface \
     && rm -rf /root/.cache /tmp/* \
     && find /opt/venv -type d -name __pycache__ -prune -exec rm -rf {} + \
-    && find /opt/venv -type f \( -name "*.pyc" -o -name "*.pyo" \) -delete
+    && find /opt/venv -type f \( -name "*.pyc" -o -name "*.pyo" \) -delete \
+    && find /opt/venv -type d -name tests -prune -exec rm -rf {} +
 
 EXPOSE 8000
 CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"]
