--- a/infra/docker/Dockerfile.api
+++ b/infra/docker/Dockerfile.api
@@ -14,6 +14,8 @@ COPY services/api/requirements-torch-cpu.txt /tmp/requirements-torch-cpu.txt
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r /tmp/requirements.txt \
     && pip install --no-cache-dir -r /tmp/requirements-torch-cpu.txt \
+    && find /opt/venv/lib/python*/site-packages -maxdepth 1 -type d \( -name "nvidia*" -o -name "triton*" \) -exec rm -rf {} + \
+    && find /opt/venv/lib/python*/site-packages -maxdepth 1 -type d \( -name "nvidia*dist-info" -o -name "triton*dist-info" \) -exec rm -rf {} + \
     && rm -rf /opt/venv/lib/python*/site-packages/pip /opt/venv/lib/python*/site-packages/pip-* \
     && rm -rf /opt/venv/lib/python*/site-packages/setuptools /opt/venv/lib/python*/site-packages/setuptools-* \
     && rm -rf /opt/venv/lib/python*/site-packages/wheel /opt/venv/lib/python*/site-packages/wheel-* \
