--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -17,6 +17,8 @@ DETECTOR_MAX_LENGTH=512
 HUMANIZER_MODEL_NAME=Eemansleepdeprived/Humaneyes
 HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
 HUMANIZER_REQUIRE_MODEL=true
+HUMANIZER_TORCH_DTYPE=float16
+HUMANIZER_NUM_BEAMS=2
 HUMANIZER_MAX_INPUT_TOKENS=512
 HUMANIZER_MAX_NEW_TOKENS=256
 CACHE_TTL_SECONDS=600
