--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -14,6 +14,8 @@ DETECTOR_MODEL_NAME=shahxeebhassan/bert_base_ai_content_detector
 DETECTOR_ALLOW_REMOTE_DOWNLOAD=true
 DETECTOR_AI_LABEL=1
 DETECTOR_MAX_LENGTH=512
+DETECTOR_EAGER_LOAD=false
+RELEASE_DETECTOR_FOR_HUMANIZER=true
 HUMANIZER_MODEL_NAME=Eemansleepdeprived/Humaneyes
 HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
 HUMANIZER_REQUIRE_MODEL=true
