--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -17,10 +17,12 @@ DETECTOR_MAX_LENGTH=512
 DETECTOR_EAGER_LOAD=false
 RELEASE_DETECTOR_FOR_HUMANIZER=true
 HUMANIZER_MODEL_NAME=Eemansleepdeprived/Humaneyes
+HUMANIZER_USE_REMOTE_API=true
 HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
 HUMANIZER_REQUIRE_MODEL=true
-HUMANIZER_TORCH_DTYPE=float16
-HUMANIZER_NUM_BEAMS=2
+HUMANIZER_API_TIMEOUT_SECONDS=60
+HF_TOKEN=
+HF_ROUTER_BASE_URL=https://router.huggingface.co
 HUMANIZER_MAX_INPUT_TOKENS=512
 HUMANIZER_MAX_NEW_TOKENS=256
 CACHE_TTL_SECONDS=600
