--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -21,6 +21,7 @@ HUMANIZER_USE_REMOTE_API=true
 HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
 HUMANIZER_REQUIRE_MODEL=true
 HUMANIZER_API_TIMEOUT_SECONDS=60
+HUMANIZER_API_URL=
 HF_TOKEN=
 HF_ROUTER_BASE_URL=https://router.huggingface.co
 HUMANIZER_MAX_INPUT_TOKENS=512
