--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -22,6 +22,8 @@ HUMANIZER_ALLOW_REMOTE_DOWNLOAD=true
 HUMANIZER_REQUIRE_MODEL=true
 HUMANIZER_API_TIMEOUT_SECONDS=60
 HUMANIZER_API_URL=
+HUMANIZER_TEMPERATURE=0.7
+HUMANIZER_TOP_P=0.9
 HF_TOKEN=
 HF_ROUTER_BASE_URL=https://router.huggingface.co
 HUMANIZER_MAX_INPUT_TOKENS=512
