--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,12 +9,13 @@ JWT_EXPIRE_MINUTES=30
 ADMIN_USER=admin
 ADMIN_PASS=admin
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-MODEL_VERSION=hf-shahxeebhassan-bert-base-ai-content-detector
-DETECTOR_MODEL_NAME=shahxeebhassan/bert_base_ai_content_detector
-DETECTOR_ALLOW_REMOTE_DOWNLOAD=true
-DETECTOR_AI_LABEL=1
-DETECTOR_MAX_LENGTH=512
-DETECTOR_EAGER_LOAD=false
+GROQ_API_KEY=
+GROQ_MODEL=openai/gpt-oss-120b
+GROQ_TEMPERATURE=1
+GROQ_TOP_P=1
+GROQ_MAX_COMPLETION_TOKENS=8192
+GROQ_REASONING_EFFORT=medium
+GROQ_MAX_INPUT_CHARS=12000
 CACHE_TTL_SECONDS=600
 MAX_UPLOAD_BYTES=3145728
 R2_ENDPOINT=
