--- a/services/api/requirements.txt
+++ b/services/api/requirements.txt
@@ -18,7 +18,5 @@ python-docx==1.1.2
 pypdf==5.2.0
 httpx==0.28.1
 tenacity==9.0.0
-transformers==4.48.1
-sentencepiece==0.2.0
-protobuf==5.29.3
+groq==1.0.0
 
