--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,11 +9,13 @@ JWT_EXPIRE_MINUTES=30
 ADMIN_USER=admin
 ADMIN_PASS=admin
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-HF_TOKEN=
-HF_MODEL=desklib/ai-text-detector-v1.01
-HF_INFERENCE_BASE_URL=https://router.huggingface.co/hf-inference/models
-HF_TIMEOUT_SECONDS=20
-HF_MAX_INPUT_CHARS=12000
+GROQ_API_KEY=
+GROQ_MODEL=llama-3.1-8b-instant
+GROQ_TEMPERATURE=1
+GROQ_TOP_P=1
+GROQ_MAX_COMPLETION_TOKENS=8192
+GROQ_REASONING_EFFORT=medium
+GROQ_MAX_INPUT_CHARS=12000
 CACHE_TTL_SECONDS=600
 MAX_UPLOAD_BYTES=3145728
 R2_ENDPOINT=
