--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,13 +9,11 @@ JWT_EXPIRE_MINUTES=30
 ADMIN_USER=admin
 ADMIN_PASS=admin
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-GROQ_API_KEY=
-GROQ_MODEL=llama-3.1-8b-instant
-GROQ_TEMPERATURE=1
-GROQ_TOP_P=1
-GROQ_MAX_COMPLETION_TOKENS=8192
-GROQ_REASONING_EFFORT=medium
-GROQ_MAX_INPUT_CHARS=12000
+HF_SPACE_PREDICT_URL=https://aaravmaloo.ai-content-detector.hf.space/run/predict
+HF_SPACE_API_TOKEN=
+HF_SPACE_TIMEOUT_SECONDS=20
+HF_SPACE_MAX_INPUT_CHARS=12000
+HF_SPACE_MODEL_VERSION=desklib/ai-text-detector-v1.01
 CACHE_TTL_SECONDS=600
 MAX_UPLOAD_BYTES=3145728
 R2_ENDPOINT=
@@ -27,5 +25,4 @@ SENTRY_DSN=
 TURNSTILE_SECRET=
 REPORT_LOCAL_DIR=./generated_reports
 PUBLIC_BASE_URL=http://localhost:8000
-
 
