--- a/services/api/.env.example
+++ b/services/api/.env.example
@@ -9,7 +9,7 @@ JWT_EXPIRE_MINUTES=30
 ADMIN_USER=admin
 ADMIN_PASS=admin
 CORS_ALLOWED_ORIGINS=http://localhost:3000
-HF_SPACE_PREDICT_URL=https://aaravmaloo.ai-content-detector.hf.space/run/predict
+HF_SPACE_PREDICT_URL=https://aaravmaloo-ai-content-detector.hf.space/gradio_api/call/detect_ai_content
 HF_SPACE_API_TOKEN=
 HF_SPACE_TIMEOUT_SECONDS=20
 HF_SPACE_MAX_INPUT_CHARS=12000
@@ -25,4 +25,3 @@ SENTRY_DSN=
 TURNSTILE_SECRET=
 REPORT_LOCAL_DIR=./generated_reports
 PUBLIC_BASE_URL=http://localhost:8000
-
